# agent-meter

./: .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: release-macos.yml
scripts/: update-pricing.mjs
src-tauri/: Cargo.toml  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/renderer/: index.html  renderer.js  styles.css
